@@ -69,4 +69,42 @@ This is a repo of the configurations I have on my computer for productivity and 
 * [Powerlevel9k Theme](https://github.com/bhilburn/powerlevel9k)
 * [Setting Up VIM](http://marcgg.com/blog/2016/03/01/vimrc-example/)
 
+## OPTIMIZE WEBSTORM PERFORMANCE
+Here is my recipe how to speed up your lovely WebStorm:
+
+Go to Preferences and do next:
+Appearance & Behaviour > System Settings > Updates: disable auto update
+Appearance & Behaviour > System Settings > Usage Statistics: Uncheck Allow sending data usage statistics to JetBrains
+Editor > Live Templates: disable all, leave only what you are really use
+Editor > Emmet: disable all emmets
+Editor > Intentions: I leave only: CSS, Declaration, JavaScript and Language Injection
+Plugins: leave only next (* - can be also disabled in case you don't need them):
+CoffeeScript *
+CSS Suport
+CVS Integration
+Git Integration
+HTML Tool
+IntelliLang
+JavaScript Debugger *
+JavaScript Intention Power Pack
+JavaScript Support
+NodeJS *
+Perforce Integration
+SASS suport *
+Project > Directories: Exclude all what you don't use
+Languages & Frameworks > JavaScript > Libraries: leave only: HTML and HTML5 / EcmaScript 5
+Languages & Frameworks > Compass: disable it
+Tools > WebBrowsers: leave only Chrome
+Open terminal, mc or what you prefer and edit vmoptions and increase usage memory pwd: "/Applications/WebStorm.app/Contents/bin/idea.vmoptions"
+
+-Xms1024m 
+-Xmx1536m 
+-XX:MaxPermSize=1024m 
+-XX:ReservedCodeCacheSize=512m 
+-XX:+UseCompressedOops 
+
+(Windows: C:\Program Files\JetBrains\WebStorm X.X.X\bin\WebStorm.exe.vmoptions)
+
+So the main idea is next: disable all in Preferences what you really don't use and increase memory for IDE.
+
  
